--- a/templates/index.html
+++ b/templates/index.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<h1>HSS Simple Flask Tutorial</h1>
 <h2>Comments</h2>
-<p>Leave your comment <a href="{{url_for('comments')}}">here</a>!</p>
+<p>Leave your comment <a href="/comments">here</a></p>
+
 {% endblock %}
