--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -1,8 +1,8 @@
-body {
-    background-color: lightgrey;
-}
-
 h1 {
     background-color: grey;
-    margin: 0.5em;
+}
+
+body {
+    background-color: lightgrey;
+    margin: 0.5rem;
 }
