--- a/templates/base.html
+++ b/templates/base.html
@@ -1,19 +1,21 @@
 <!DOCTYPE html>
-<html>
-
+<html lang="en">
 <head>
+    <meta charset="UTF-8">
     <title>HSS Flask Comments Tutorial</title>
     <link rel="stylesheet" href="static/css/styles.css">
 </head>
-
 <body>
-<header>
-    <img src="static/pics/HSS Logo.png">
-</header>
-<div>
-    {% block content %}
-    {% endblock %}
-</div>
-</body>
+    <header>
+        <img src="static/pics/HSS Logo.png">
+    </header>
+    <div>
+        <h1>HSS Simple Flask Tutorial</h1>
+    </div>
+    <div>
+        {% block content %}
+        {% endblock %}
+    </div>
 
+</body>
 </html>
