--- a/templates/comments.html
+++ b/templates/comments.html
@@ -1,15 +1,19 @@
 {% extends 'base.html' %}
 
 {% block content %}
-
+<h1>Your comment</h1>
 <form action="/comments" method="post">
     <input type="text" name="comment"><br>
     <input type="submit" value="Submit">
 </form>
+<h1>Previous comments</h1>
 
-<h1>Previous Comments</h1>
-{% for comment in comments %}
-    <p>{{comment}} </p>
-{% endfor %}
+<div>
+    {% for comment in comments %}
+
+    <p>{{ comment }}</p>
+
+    {% endfor %}
+</div>
 
 {% endblock %}
