--- a/templates/comments.html
+++ b/templates/comments.html
@@ -3,7 +3,7 @@
 {% block content %}
 <h1>Your comment</h1>
 <form action="/comments" method="post">
-    <input type="text" name="comment"><br>
+    <input type="text" placeholder="add your comment here" name="comment"><br>
     <input type="submit" value="Submit">
 </form>
 <h1>Previous comments</h1>
